--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "jade": "~1.11.0",
     "morgan": ">=1.9.1",
+    "pug": "^2.0.3",
     "serve-favicon": "~2.4.2"
   }
 }
